--- a/src/app/pages/ride/assign-ride/assign-ride.component.html
+++ b/src/app/pages/ride/assign-ride/assign-ride.component.html
@@ -37,6 +37,7 @@
                                 <tr>
                                     <th>Ride Id</th>
                                     <th>User Id</th>
+                                    <th>Booking Type</th>
                                     <!-- <th>Phone Number</th> -->
                                     <!-- <th>Driver Id</th> -->
                                     <th>Vehicle Tyoe</th>
@@ -52,6 +53,7 @@
                                 <tr *ngFor="let data of rideData" (click)="openRideDetails(data.ride_id,data.status)">
                                     <td>{{data.ride_id}}</td>
                                    <td>{{data.user_id}}</td>
+                                   <td>{{data.bookingtype}}</td>
                                    <!-- <td>{{data.driver_id}}</td> -->
                                    <td>{{data.vehicle_type}}</td>
                                    <td>{{data.car_no}}</td>
