--- a/src/app/pages/partner/deactived-partner/deactived-partner.component.html
+++ b/src/app/pages/partner/deactived-partner/deactived-partner.component.html
@@ -31,6 +31,7 @@
                             <thead>
                                 <tr>
                                     <th>Partner Id</th>
+                                    <th>Partner Type</th>
                                     <th>Partner Name</th>
                                     <th>Phone Number</th>
                                     <th>Email Id</th>
@@ -42,6 +43,7 @@
                             <tbody *ngIf="partnerData.length > 0">
                                 <tr *ngFor="let data of partnerData" (click)="openPartnerDetailsPage(data.partner_id)">
                                    <td>{{data.partner_id}}</td>
+                                   <td>{{data.partner_type}}</td>
                                    <td>{{data.company_name}}</td>
                                    <td>{{data.phone}}</td>
                                    <td>{{data.email}}</td>
