--- a/src/app/pages/ride/ongoing-ride/ongoing-ride.component.html
+++ b/src/app/pages/ride/ongoing-ride/ongoing-ride.component.html
@@ -36,6 +36,7 @@
                             <thead>
                                 <tr>
                                     <th>Ride Id</th>
+                                    <th>Booking Type</th>
                                     <th>Driver Id</th>
                                     <th>User Id</th>
                                     <th>Pickup</th>
@@ -49,6 +50,7 @@
                             <tbody>
                                 <tr *ngFor="let data of rideData" (click)="openRideDetails(data.ride_id,data.status)">
                                    <td>{{data.ride_id}}</td>
+                                   <td>{{data.bookingtype}}</td>
                                    <td>{{data.user_id}}</td>
                                    <td>{{data.driver_id}}</td>
                                    <td>{{data.pickupaddress}}</td>
