--- a/src/app/pages/ride/manual-ride/manual-ride.component.html
+++ b/src/app/pages/ride/manual-ride/manual-ride.component.html
@@ -146,7 +146,8 @@
                 <button *ngIf="isOTPVerified || this.appservice.role == 'admin'" type="submit" class="btn btn-primary" (click)="onSubmit()" style="margin-left: 15px;" > <span *ngIf="bookingtype != 'Trailer'">Book Ride</span> <span *ngIf="bookingtype == 'Trailer' && this.appservice.user.partner_type != 'B2B'">Request For Fair</span> </button>
               </p>
               <p class="text-center">
-                <span *ngIf="bookingtype == 'Driver'">{{b2cDriverFare.msg}}</span>
+                <span *ngIf="bookingtype == 'Driver' && this.appservice.user.partner_type == 'B2C'">{{b2cDriverFare.msg}}</span>
+                <span *ngIf="this.appservice.user.partner_type == 'B2B'">0</span>
               </p>
             </form>
           </div>
